# chatrs

./: Cargo.toml  justfile
client/: Cargo.toml  README.md  justfile
client/api/: Cargo.toml  README.md
client/api/docs/: DefaultApi.md
client/api/src/apis/: configuration.rs  default_api.rs
client/src/: main.rs
server/: Cargo.toml  justfile  open-api.json
server/.sqlx/: query-391a6d13c1232e659f25338117808909aff64340f04271e89b86e47635b255ba.json
server/migrations/: 20230831170306_Create_initial_user_table.sql  20230831171920_Create_initial_admin_user.sql
server/src/: main.rs
server/src/auth/: apikey.rs  mod.rs
server/src/endpoints/: ping.rs
server/src/models/: mod.rs
