[package]
name = "chatrs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
shuttle-rocket = "0.25.0"
shuttle-runtime = "0.25.0"
tokio = "1.26.0"
rocket_okapi = {version = "0.8.0-rc.3", features = ["swagger"]}
okapi = { version = "0.4.0", features = ["derive_json_schema"] }
shuttle-shared-db = { version= "0.25.0", features=["postgres"] }
sqlx = { version= "0.7.1", features=["postgres"] }
rustls = "0.21.1"